# splitbits

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: base.rs  character.rs  field.rs  lib.rs  location.rs  name.rs  segment.rs  template.rs  type.rs
tests/: test.rs  test_combinebits.rs  test_compile_failures.rs  test_replacebits.rs  test_splitbits.rs  test_splitbits_named.rs  test_splitbits_named_into.rs  test_splitbits_then_combine.rs  test_splitbits_ux.rs  test_splithex.rs
tests/compile_failures/: b64_in_hex.rs  b64_in_hex.stderr  bad_overflow_setting_combinebits.rs  bad_overflow_setting_combinebits.stderr  bad_setting_name_combinebits.rs  bad_setting_name_combinebits.stderr  bad_setting_name_splitbits.rs  bad_setting_name_splitbits.stderr  bad_setting_value_splitbits.rs  bad_setting_value_splitbits.stderr  combine_inputs_missing.rs  combine_inputs_missing.stderr  combine_inputs_not_equal.rs  combine_inputs_not_equal.stderr  combine_too_big.rs  combine_too_big.stderr  empty_combinebits.rs  empty_combinebits.stderr  empty_splitbits.rs  empty_splitbits.stderr  hex_in_bin.rs  hex_in_bin.stderr  literal_in_splitbits.rs  literal_in_splitbits.stderr  mismatch_split_then_combine.rs  mismatch_split_then_combine.stderr  replacebits_missing_input.rs  replacebits_missing_input.stderr  single_arg_splitbits.rs  single_arg_splitbits.stderr  splitbits_bad_template_width.rs  splitbits_bad_template_width.stderr  splitbits_missing_input.rs  splitbits_missing_input.stderr  swapped_splitbits.rs  swapped_splitbits.stderr  too_many_args_combinebits.rs  too_many_args_combinebits.stderr  (+6 more)
