[package]
name = "splitbits"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Sean Erle Johnson"]
readme = "README.md"
documentation = "https://docs.rs/splitbits"
repository = "https://github.com/merehap/splitbits.git"
description = "Concise bit field extraction"
keywords = ["bitfields", "bits", "splitbits"]
categories = ["rust-patterns", "parser-implementations"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.36"
syn = { version = "2.0.66", features=["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0.96"
# ux is only implicitly used in the code, but is explicit in the tests.
ux = "0.1.6"
